--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -4,7 +4,7 @@ on:
         tags-ignore:
             - '*'
         branches:
-            - '*'
+            - 'main'
 jobs:
     full-test:
         container: cuaesd/aesd-autotest:assignment4-buildroot
